Source/WebKit2/Shared/API/Cocoa/WKRemoteObjectCoder.mm
@@ -41,6 +41,7 @@
 
 static const char* const classNameKey = "$class";
 static const char* const objectStreamKey = "$objectStream";
+static const char* const stringKey = "$string";
 
 static NSString * const selectorKey = @"selector";
 static NSString * const typeStringKey = @"typeString";
@@ -213,6 +214,11 @@ static void encodeInvocation(WKRemoteObjectEncoder *encoder, NSInvocation *invoc
     }
 }
 
+static void encodeString(WKRemoteObjectEncoder *encoder, NSString *string)
+{
+    encoder->_currentDictionary->set(stringKey, API::String::create(string));
+}
+
 static void encodeObject(WKRemoteObjectEncoder *encoder, id object)
 {
     ASSERT(object);
@@ -232,6 +238,11 @@ static void encodeObject(WKRemoteObjectEncoder *encoder, id object)
     if ([object isKindOfClass:[NSInvocation class]]) {
         // We have to special case NSInvocation since we don't want to encode the target.
         encodeInvocation(encoder, object);
+        return;
+    }
+
+    if ([object isKindOfClass:[NSString class]]) {
+        encodeString(encoder, object);
         return;
     }
 
@@ -546,6 +557,15 @@ static NSInvocation *decodeInvocation(WKRemoteObjectDecoder *decoder)
     return invocation;
 }
 
+static NSString *decodeString(WKRemoteObjectDecoder *decoder)
+{
+    API::String* string = decoder->_currentDictionary->get<API::String>(stringKey);
+    if (!string)
+        [NSException raise:NSInvalidUnarchiveOperationException format:@"String missing"];
+
+    return string->string();
+}
+
 static id decodeObject(WKRemoteObjectDecoder *decoder)
 {
     API::String* classNameString = decoder->_currentDictionary->get<API::String>(classNameKey);
@@ -562,6 +582,9 @@ static id decodeObject(WKRemoteObjectDecoder *decoder)
 
     if (objectClass == [NSInvocation class])
         return decodeInvocation(decoder);
+
+    if (objectClass == [NSString class])
+        return decodeString(decoder);
 
     id result = [objectClass allocWithZone:decoder.zone];
     if (!result)
